--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -31,13 +31,13 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">SCHRITT 1</a>
+                            <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">SCHRITT 1</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">SCHRITT 2</a>
+                            <a class="nav-link text-dark" href=" @Url.Action("System_Auswählen", "Konfigurator")">SCHRITT 2</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">SCHRITT 3</a>
+                            <a class="nav-link text-dark" href=" @Url.Action("OrdersKey", "Konfigurator")">SCHRITT 3</a>
                         </li>
                     </ul>
                     
