--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -82,7 +82,7 @@
                                 <details>
                                  <summary>  </summary>
                                     <div id="SelectTurItem">
-                                        <input id="TypeSelectTurItem" name="Artikl" placeholder="Ssl" />
+                                        <input id="TypeSelectTurItem" name="Ssl" placeholder="Ssl" />
                                     </div>
                                 <div id="SelectTurItem">
                                     <select id="TypeSelectTurItem" name="ZylinderId">
@@ -235,7 +235,7 @@
                                       <details>
                                         <summary>  </summary>
                                              <div id ="SelectTurItem">
-                                                <input id="TypeSelectTurItem" name="Artikl" placeholder="Ssl" />
+                                                      <input id="TypeSelectTurItem" name="Ssl" placeholder="Ssl" />
                                             </div>
                                 <div id="SelectTurItem">
                                         <select id="TypeSelectTurItem" name="ZylinderId">
